Added show edit timestamp/blaming & fixed image upload detection issue

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,6 +70,8 @@ stof_doctrine_extensions:
     orm:
         default:
             sluggable: true
+            timestampable: true
+            blameable: true
 
 vich_uploader:
     db_driver: orm
