--- a/composer.json
+++ b/composer.json
@@ -9,26 +9,26 @@
         "symfony/symfony": "2.1.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
         "doctrine/doctrine-bundle": "1.0.*",
-        "twig/extensions": "1.0.*",
-        "symfony/assetic-bundle": "2.1.*",
+        "twig/extensions": "1.*@dev",
+        "symfony/assetic-bundle": "2.1.*@dev",
 	"symfony/swiftmailer-bundle": "2.1.*",
 	"symfony/monolog-bundle": "2.1.*",
         "sensio/distribution-bundle": "2.1.*",
         "sensio/framework-extra-bundle": "2.1.*",
         "sensio/generator-bundle": "2.1.*",
-        "jms/security-extra-bundle": "1.2.*",
-        "jms/di-extra-bundle": "1.1.*",
+        "jms/security-extra-bundle": "*",
+        "jms/di-extra-bundle": "*",
         "friendsofsymfony/user-bundle": "v1.3.1 as dev-master",
         "sonata-project/admin-bundle": "*",
         "sonata-project/doctrine-orm-admin-bundle": "*",
-        "sonata-project/user-bundle": "dev-master#92a144c020ff5e9eb6c89a4afcdb79131eadaf20",
+        "sonata-project/user-bundle": "*",
         "sonata-project/cache-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "*",
 	"instaclick/base-test-bundle": "dev-master",
 	"doctrine/doctrine-fixtures-bundle": "dev-master",
 	"stof/doctrine-extensions-bundle": "dev-master",
         "helios-ag/fm-bbcode-bundle": "dev-master",
-        "vich/uploader-bundle": "dev-master",
+        "vich/uploader-bundle": "*@dev",
         "knplabs/knp-gaufrette-bundle" : "dev-master",
 		"Trsteel/ckeditor-bundle": "dev-master"
     },
