--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,20 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.1.*",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.0.*",
+        "symfony/symfony": "2.2.*",
+        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/doctrine-bundle": "1.2.*",
         "twig/extensions": "1.*@dev",
-        "symfony/assetic-bundle": "2.1.*@dev",
-	"symfony/swiftmailer-bundle": "2.1.*",
-	"symfony/monolog-bundle": "2.1.*",
-        "sensio/distribution-bundle": "2.1.*",
-        "sensio/framework-extra-bundle": "2.1.*",
-        "sensio/generator-bundle": "2.1.*",
-        "jms/security-extra-bundle": "*",
-        "jms/di-extra-bundle": "*",
-        "friendsofsymfony/user-bundle": "v1.3.1 as dev-master",
+        "symfony/assetic-bundle": "2.*@dev",
+        "symfony/swiftmailer-bundle": "2.2.*",
+        "symfony/monolog-bundle": "2.2.*",
+        "sensio/distribution-bundle": "2.2.*",
+        "sensio/framework-extra-bundle": "2.2.*",
+        "sensio/generator-bundle": "2.2.*",
+        "jms/security-extra-bundle": "1.4.*",
+        "jms/di-extra-bundle": "1.3.*",
+        "friendsofsymfony/user-bundle": "v1.3.5 as dev-master",
+        "sonata-project/core-bundle": "*",
         "sonata-project/admin-bundle": "*",
         "sonata-project/doctrine-orm-admin-bundle": "*",
         "sonata-project/user-bundle": "*",
